# rustweb

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  example.env
.sqlx/: query-00e73187a50d99ea0b0f6195933548568b82c1787e23047f625053c3f059b5bf.json  query-12a8dbcaf4a22b5286c9eaec6268ac077dc3685e79e4df987864219b957c074c.json  query-142c9c93379733bfa8dda0a03146605b8648412bf0de2c5ed809e6233ac494c7.json  query-17887da339bb56efed7d7acedef5a20a786f0a188b0844a58a2daea5cacc1c80.json  query-18b2e0abf205a0baa94cc841ddd88b1674cc67abd806f7028067e4ebc6cdf8c5.json  query-1df9b4707aad4146cf18ad7d58bdee1e6dc8cbda3a6dba622eeff0fa633e7aba.json  query-23b09a9fad7137cd5e946593eb048e780ad0d9b3790cbd57c114639e2a8eab1a.json  query-2d1c4b7dbec7c05cecb09fa769fcb5a1ca6255a92094f2f0155413faa6730a81.json  query-3715e79efce27bc6e94cc51c08117c5284ca89adc067074e0b999e021a697927.json  query-38e2575c758d419728eb92acea0bd240a17a89d0d9e732cf6ffc8520a5878cb4.json  query-421ab4497daae4c4f7668b75a1ba685a86ac2207a1e1f8012c074ce4b00f6a94.json  query-456531253901d341252fd9941562dd849e5dd8e1cb9eec916e59fd2d1bbf6889.json  query-4f32cb0a3453c1f7ef813fc9820e5a012eea31e9b531c9016bc9199409a5cc9f.json  query-519bd9a19d968f27e4ca22707059390588ba4adffaf7aec794c41750221a0247.json  query-537b3ed88e6e3b893d21b5147c9d4652a1d6a536eeb92ed72566b9f09e4525a3.json  query-5c0910b0625529532aef9ba5f912bc0478d5317fd547d39129b9dede4dc2a679.json  query-7218e14249a60bc3e44cee8d00fafa24f41e6e3ad2862a16e6f707f0b652599e.json  query-722319283762ebe9776a192d668e220cf12a809aa2e696ff7edd7b4d6f9e7256.json  (+17 more)
(+52 files in other folders)
